# mofsim-benchservice

./: .env.example  LICENSE  README.md  alembic.ini  pyproject.toml
alerts/: __init__.py  checker.py  manager.py  notifier.py  rules.py
api/: __init__.py  dependencies.py  main.py  metrics.py
api/middleware/: __init__.py  error_handler.py  logging.py
api/routers/: __init__.py  alerts.py  models.py  structures.py  system.py  tasks.py
api/schemas/: __init__.py  alert.py  model.py  response.py  structure.py  system.py  task.py
config/: __init__.py  default.env
core/: __init__.py  config.py
core/callback/: __init__.py  webhook.py
core/models/: __init__.py  loader.py  registry.py
core/scheduler/: __init__.py  gpu_manager.py  priority_queue.py  scheduler.py  task_lifecycle.py
core/services/: __init__.py  log_service.py  structure_service.py  task_service.py
core/tasks/: __init__.py  base.py  bulk_modulus.py  heat_capacity.py  interaction_energy.py  optimization.py  single_point.py  stability.py
db/: __init__.py  database.py  models.py
db/crud/: __init__.py  structure.py  task.py
db/migrations/: __init__.py  env.py
db/migrations/versions/: __init__.py
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
docs/: CHANGELOG.md  README.md  engineering_requirements.md  index.md  project_analysis_report.md
docs/api/: api_reference.md  error_codes.md  sdk_quickstart.md  sdk_reference.md  webhook_integration.md
docs/architecture/: api_design.md  architecture_design.md  database_design.md  gpu_scheduler_design.md  task_lifecycle.md
docs/deployment/: backup_recovery.md  configuration_reference.md  deployment_guide.md  monitoring_setup.md  operations_manual.md  troubleshooting.md
docs/development/: adding_new_model.md  adding_new_task.md  checklist.md  coding_standards.md  development_guide.md  development_plan.md  phase1_tasks.md  testing_guide.md
docs/maintenance/: security_maintenance.md
docs/user/: model_catalog.md  task_types_reference.md  user_guide.md
logging_config/: __init__.py  archive.py  logging.py
mof_benchmark/analysis/plot/: dataset.ipynb
scripts/: __init__.py  run_server.py  run_worker.py
sdk/: __init__.py  client.py
sdk/mofsim_client/: __init__.py  async_client.py  client.py  exceptions.py  models.py  task.py
storage/: __init__.py  file_storage.py
tests/: conftest.py
tests/alerts/: __init__.py  test_notifier.py  test_rules.py
tests/api/: __init__.py  test_metrics.py  test_routers.py  test_task_api.py  test_tasks.py
tests/core/: test_config.py  test_executors.py  test_log_service.py  test_models.py  test_scheduler.py  test_structure_service.py  test_webhook.py
tests/integration/: __init__.py
tests/sdk/: __init__.py  test_mofsim_client.py
tests/workers/: __init__.py
workers/: __init__.py  celery_app.py  worker_manager.py
workers/tasks/: __init__.py  base.py  bulk_modulus.py  heat_capacity.py  interaction_energy.py  maintenance.py  optimization.py  single_point.py  stability.py
